Fixes some NPE, Aether seems to be working, updates some dependencies, servers can be started and communicated with, needs to test everything and to fix the widget